--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <title>Reactive Demo</title>
-    <script src="/lib/lodash.js"></script>
-    <script src="/lib/jquery-1.12.0.min.js"></script>
-    <script src="/lib/bluebird.min.js"></script>
-    <script src="/lib/rx.all.compat.js"></script>
-    <script src="/lib/babel-polyfill.js"></script>
+    <script src="/js/lib/lodash.js"></script>
+    <script src="/js/lib/jquery-1.12.0.min.js"></script>
+    <script src="/js/lib/bluebird.min.js"></script>
+    <script src="/js/lib/rx.all.compat.js"></script>
+    <script src="/js/lib/babel-polyfill.js"></script>
   </head>
   <body>
 
@@ -28,5 +28,5 @@
     </p>
 
   </body>
-  <script src="/index.js"></script>
+  <script src="/js/index.js"></script>
 </html>
