auto-translate 'switch' exapmle

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
     <p>
       <label for="englishIput">English:</label><br />
       <input id="englishInput" type="text" />
+
+      <input type="checkbox" id="autoTranslateCheckbox" />
+      <label for="autoTranslateCheckbox">Auto-Translate</label>
     <p>
 
     <button id="submitButton" type="button">Submit</button>
